--- a/namasteReact/index.css
+++ b/namasteReact/index.css
@@ -1,3 +1,54 @@
-#heading {
-  color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.logo {
+  width: 200px;
+}
+
+.nav-items > ul {
+  font-size: 21px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.body {
+  border: 1px solid red;
+  padding: 5px;
+}
+
+.res-card {
+  width: 200px;
+  height: 300px;
+  border: 1px solid ridge;
+  background-color: beige;
+  padding: 5px;
+}
+
+.res-card:hover {
+  cursor: pointer;
+  border: 2px solid blue;
+}
+
+.restaurant-container {
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid red;
+  padding: 5px;
+}
+
+.res-logo {
+  width: 100%;
+  height: 35%;
+}
+
+.searchbar-container {
+  border: 2px solid black;
 }
