--- a/namasteReact/index.css
+++ b/namasteReact/index.css
@@ -1,77 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-
-.logo {
-  width: 200px;
-}
-
-.nav-items > ul {
-  font-size: 21px;
-  display: flex;
-  list-style-type: none;
-}
-
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-}
-
-.body {
-  border: 1px solid red;
-  padding: 5px;
-}
-
-.res-card {
-  width: 200px;
-  height: 300px;
-  border: 1px solid ridge;
-  background-color: #f0f0f0;
-  padding: 5px;
-}
-
-.res-card:hover {
-  cursor: pointer;
-  border: 2px solid blue;
-}
-
-.restaurant-container {
-  display: flex;
-  flex-wrap: wrap;
-  border: 2px solid red;
-  padding: 5px;
-}
-
-.res-logo {
-  width: 100%;
-  height: 35%;
-}
-
-.searchbar-container {
-  border: 2px solid black;
-  margin: 5px;
-}
-
-button {
-  margin: 5px;
-  cursor: pointer;
-}
-
-#btnSignIn {
-  height: 55px;
-}
-
-.shimmer-ui-card {
-  width: 200px;
-  height: 300px;
-  border: 1px solid gray;
-  background-color: #f0f0f0;
-  padding: 5px;
-}
-
-.shimmer-ui-card:hover {
-  cursor: pointer;
-  border: 2px solid blue;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
